# AMICI

./: .appveyor.yml  .clang-format  .clang-tidy  .coveragerc  .cppcheck-exitcode-suppressions  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  AMICI.prj  AMICI2D2D.m  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  LICENSE.md  Makefile  README.md  SBML2AMICI.m  _a_m_i_c_i2_d2_d_8m_source.html  _s_b_m_l2_a_m_i_c_i_8m.html  _s_b_m_l2_a_m_i_c_i_8m.js  _s_b_m_l2_a_m_i_c_i_8m_a11657ca9a5b1f74cf3d886a0a00f1209_icgraph.map  _s_b_m_l2_a_m_i_c_i_8m_a11657ca9a5b1f74cf3d886a0a00f1209_icgraph.md5  _s_b_m_l2_a_m_i_c_i_8m_source.html  abstract__model_8cpp_source.html  abstract__model_8h_source.html  am__and_8m.html  am__and_8m.js  am__and_8m_a28bdd6e5dc114fc35fcf8693146ff875_cgraph.map  am__and_8m_a28bdd6e5dc114fc35fcf8693146ff875_cgraph.md5  am__and_8m_a28bdd6e5dc114fc35fcf8693146ff875_icgraph.map  (+1931 more)
binder/: start  (+5 more)
models/model_dirac/: CMakeLists.txt  JSparse.cpp  Jy.cpp  dJydy.cpp  deltasx.cpp  deltax.cpp  dxdotdp.cpp  dydx.cpp  main.cpp  model_dirac.h  model_dirac.i  model_dirac_J.cpp  model_dirac_J.h  model_dirac_JB.cpp  model_dirac_JB.h  model_dirac_JBand.cpp  model_dirac_JBand.h  model_dirac_JBandB.cpp  model_dirac_JBandB.h  model_dirac_JDiag.cpp  model_dirac_JDiag.h  model_dirac_JSparse.cpp  model_dirac_JSparse.h  model_dirac_JSparseB.cpp  model_dirac_JSparseB.h  model_dirac_Jrz.cpp  model_dirac_Jrz.h  model_dirac_Jv.cpp  model_dirac_Jv.h  model_dirac_JvB.cpp  model_dirac_JvB.h  model_dirac_Jy.cpp  model_dirac_Jy.h  model_dirac_Jz.cpp  model_dirac_Jz.h  model_dirac_dJrzdsigma.cpp  model_dirac_dJrzdsigma.h  model_dirac_dJrzdz.cpp  model_dirac_dJrzdz.h  model_dirac_dJydp.cpp  (+96 more)
models/model_dirac_py/: CMakeLists.txt  Jy.cpp  create_splines.cpp  dJydsigma.cpp  dJydy.cpp  dJydy.h  deltaqB.cpp  deltasx.cpp  deltax.cpp  dxdotdp_explicit.cpp  dxdotdp_explicit.h  dxdotdx_explicit.cpp  dxdotdx_explicit.h  dydx.cpp  explicit_roots.cpp  h.h  main.cpp  model_dirac_py.cpp  model_dirac_py.h  my.h  p.h  root.cpp  setup.py  sigmay.cpp  sigmay.h  stau.cpp  wrapfunctions.cpp  wrapfunctions.h  x.h  x_rdata.cpp  x_rdata.h  x_solver.cpp  xdot.cpp  xdot.h  y.cpp  y.h
models/model_events/: CMakeLists.txt  Jrz.cpp  Jy.cpp  Jz.cpp  dJrzdsigma.cpp  dJydsigma.cpp  dJydy.cpp  dJzdsigma.cpp  dJzdz.cpp  deltasx.cpp  dydp.cpp  dydx.cpp  dzdx.cpp  main.cpp  model_events.h  model_events.i  model_events_J.cpp  model_events_J.h  model_events_JB.cpp  model_events_JB.h  model_events_JBand.cpp  model_events_JBand.h  model_events_JBandB.cpp  model_events_JBandB.h  model_events_JDiag.cpp  model_events_JDiag.h  model_events_JSparse.cpp  model_events_JSparse.h  model_events_JSparseB.cpp  model_events_JSparseB.h  model_events_Jrz.cpp  model_events_Jrz.h  model_events_Jv.cpp  model_events_Jv.h  model_events_JvB.cpp  model_events_JvB.h  model_events_Jy.cpp  model_events_Jy.h  model_events_Jz.cpp  model_events_Jz.h  (+106 more)
models/model_jakstat_adjoint/: CMakeLists.txt  JSparse.cpp  dJydsigma.cpp  dJydy.cpp  dwdp.cpp  dwdx.cpp  dxdotdp.cpp  dydp.cpp  main.cpp  model_jakstat_adjoint.h  model_jakstat_adjoint.i  model_jakstat_adjoint_J.cpp  model_jakstat_adjoint_J.h  model_jakstat_adjoint_JB.cpp  model_jakstat_adjoint_JB.h  model_jakstat_adjoint_JBand.cpp  model_jakstat_adjoint_JBand.h  model_jakstat_adjoint_JBandB.cpp  model_jakstat_adjoint_JBandB.h  model_jakstat_adjoint_JDiag.cpp  model_jakstat_adjoint_JDiag.h  model_jakstat_adjoint_JSparse.cpp  model_jakstat_adjoint_JSparse.h  model_jakstat_adjoint_JSparseB.cpp  model_jakstat_adjoint_JSparseB.h  model_jakstat_adjoint_Jrz.cpp  model_jakstat_adjoint_Jrz.h  model_jakstat_adjoint_Jv.cpp  model_jakstat_adjoint_Jv.h  model_jakstat_adjoint_JvB.cpp  model_jakstat_adjoint_JvB.h  model_jakstat_adjoint_Jy.cpp  model_jakstat_adjoint_Jy.h  model_jakstat_adjoint_Jz.cpp  model_jakstat_adjoint_Jz.h  model_jakstat_adjoint_dJdp.cpp  model_jakstat_adjoint_dJdp.h  model_jakstat_adjoint_dJdx.cpp  model_jakstat_adjoint_dJdx.h  model_jakstat_adjoint_dJrzdsigma.cpp  (+120 more)
models/model_jakstat_adjoint_o2/: CMakeLists.txt  dJydsigma.cpp  dwdp.cpp  dwdx.cpp  dxdotdp.cpp  dydp.cpp  dydx.cpp  main.cpp  model_jakstat_adjoint_o2.h  model_jakstat_adjoint_o2.i  model_jakstat_adjoint_o2_J.cpp  model_jakstat_adjoint_o2_J.h  model_jakstat_adjoint_o2_JB.cpp  model_jakstat_adjoint_o2_JB.h  model_jakstat_adjoint_o2_JBand.cpp  model_jakstat_adjoint_o2_JBand.h  model_jakstat_adjoint_o2_JBandB.cpp  model_jakstat_adjoint_o2_JBandB.h  model_jakstat_adjoint_o2_JDiag.cpp  model_jakstat_adjoint_o2_JDiag.h  model_jakstat_adjoint_o2_JSparse.cpp  model_jakstat_adjoint_o2_JSparse.h  model_jakstat_adjoint_o2_JSparseB.cpp  model_jakstat_adjoint_o2_JSparseB.h  model_jakstat_adjoint_o2_Jrz.cpp  model_jakstat_adjoint_o2_Jrz.h  model_jakstat_adjoint_o2_Jv.cpp  model_jakstat_adjoint_o2_Jv.h  model_jakstat_adjoint_o2_JvB.cpp  model_jakstat_adjoint_o2_JvB.h  model_jakstat_adjoint_o2_Jy.cpp  model_jakstat_adjoint_o2_Jy.h  model_jakstat_adjoint_o2_Jz.cpp  model_jakstat_adjoint_o2_Jz.h  model_jakstat_adjoint_o2_dJrzdsigma.cpp  model_jakstat_adjoint_o2_dJrzdsigma.h  model_jakstat_adjoint_o2_dJrzdz.cpp  model_jakstat_adjoint_o2_dJrzdz.h  model_jakstat_adjoint_o2_dJydp.cpp  model_jakstat_adjoint_o2_dJydp.h  (+103 more)
models/model_nested_events/: CMakeLists.txt  Jy.cpp  dJydsigma.cpp  dJydy.cpp  deltaqB.cpp  deltax.cpp  dydx.cpp  main.cpp  model_nested_events.h  model_nested_events.i  model_nested_events_J.cpp  model_nested_events_J.h  model_nested_events_JB.cpp  model_nested_events_JB.h  model_nested_events_JBand.cpp  model_nested_events_JBand.h  model_nested_events_JBandB.cpp  (+124 more)
python/: CMakeLists.txt  importSBML.py  model.py  setup.py.in  testSBML.py
swig/: CMakeLists.txt  CMakeLists_model.cmake  CMakeLists_model.txt  abstract_model.i  amici.i  edata.i  hdf5.i  logging.i  misc.i  model.i  model_dae.i  model_ode.i  modelname.template.i  rdata.i  solver.i  solver_cvodes.i  solver_idas.i  std_unique_ptr.i  stdvec2numpy.h
(+3845 files in other folders)
